--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "start": "node dist/index.js",
     "lint": "eslint src/** --ext .ts --fix",
     "prettier": "prettier --write .",
-    "format": "yarn lint && yarn prettier"
+    "format": "yarn lint && yarn prettier",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   },
-  "type": "module",
   "engines": {
-    "node": ">=14"
+    "node": ">=12"
   }
 }
