--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js input.txt",
     "lint": "eslint src/** --ext .ts --fix",
     "prettier": "prettier --write .",
     "format": "yarn lint && yarn prettier",
